small spacing issue fixed

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ p {
 
 #map {
 	width: 100%;
-	height: 53rem;
+	height: 52rem;
 }
 #search-input {
 	width: 35vw;
